--- a/app/js/app/partials/license.html
+++ b/app/js/app/partials/license.html
@@ -29,7 +29,7 @@
           <li><span class="icon-slack"></span> Slack Access<a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
           <div class="info-tip">
             <h4>Slack Channel</h4>
-            <div>The OPengine has a slack channel. <a href="#!/slack">Join the <span class="icon-slack"></span> channel</a>.</div>
+            <div>The OPengine has a slack channel. <a href="#/slack">Join the <span class="icon-slack"></span> channel</a>.</div>
           </div></li>
           <li><span class="icon-slack"></span> Slack OPengine Support Channel<a class="info" href="javascript:void(0)"><span class="icon-info-circle"></span></a>
           <div class="info-tip">
